--- a/netflix/index.html
+++ b/netflix/index.html
@@ -45,6 +45,31 @@
                 <h1 class="hero__title">Unlimited movies, TV <br> shows and more.</h1>
                 <p class="hero__subtitle">Watch anywhere. Cancel anytime.</p>
                 <p class="hero__description">Ready to watch? Enter your email to create or restart your membership.</p>
+                <div class="email__form__container">
+                    <div class="form__container">
+                        <input type="email" class="email__input" placeholder=" ">
+                        <label class="email__label">Email address</label>
+                    </div>
+                    <button class="email__button">Get Started ></button>
+                </div>
+            </div>
+        </section>
+        <section class="features__container">
+            <div class="feature">
+                <div class="feature__details">
+                    <div>
+                        <h3 class="feature__title">Enjoy on your TV.</h3>
+                        <p class="feature__subtitle">Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</p>
+                    </div>
+                    <div class="feature__image__container">
+                        <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/tv.png" alt="no image" class="feature__image">
+                        <div class="feature__background__video__content">
+                            <video controls autoplay loop class="feature__background__video">
+                                <source  src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-tv-in-0819.m4v" >
+                            </video>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
