--- a/netflix/index.html
+++ b/netflix/index.html
@@ -1,32 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <title>Netflix Clone</title>
 </head>
+
 <body>
     <script src="index.js"></script>
     <header>
         <nav class="navbar">
             <div class="navbar__brand">
-                <img src="https://www.freepnglogos.com/uploads/netflix-logo-0.png" alt="no logo" height="50px" width="140px">
+                <img src="https://www.freepnglogos.com/uploads/netflix-logo-0.png" alt="no logo" height="50px"
+                    width="140px">
             </div>
             <div class="navbar__nav__items">
                 <div class="nav__item">
                     <div class="dropdown__container">
-                    <i class="fas fa-globe" alt="no "></i>
-                    <select name="language" id="languageSelect" class="language__drop__down">
-                        <option value="english">English</option>
-                        <option value="hindi">Hindi</option>
-                    </select>  
-                    </div> 
+                        <i class="fas fa-globe" alt="no "></i>
+                        <select name="language" id="languageSelect" class="language__drop__down">
+                            <option value="english">English</option>
+                            <option value="hindi">Hindi</option>
+                        </select>
+                    </div>
                 </div>
                 <div class="nav__item__signin">
                     <button class="signin">sign in</button>
@@ -37,11 +43,12 @@
     <main>
         <section class="hero">
             <div class="hero__bg__image__container">
-                <img src="https://assets.nflxext.com/ffe/siteui/vlv3/9c5457b8-9ab0-4a04-9fc1-e608d5670f1a/710d74e0-7158-408e-8d9b-23c219dee5df/IN-en-20210719-popsignuptwoweeks-perspective_alpha_website_small.jpg" alt="no image" class="hero__bg" width="100%" height="100%">
+                <img src="https://assets.nflxext.com/ffe/siteui/vlv3/9c5457b8-9ab0-4a04-9fc1-e608d5670f1a/710d74e0-7158-408e-8d9b-23c219dee5df/IN-en-20210719-popsignuptwoweeks-perspective_alpha_website_small.jpg"
+                    alt="no image" class="hero__bg" width="100%" height="100%">
             </div>
             <div class="hero__bg__overlay"></div>
 
-            <div class="hero__card"> 
+            <div class="hero__card">
                 <h1 class="hero__title">Unlimited movies, TV <br> shows and more.</h1>
                 <p class="hero__subtitle">Watch anywhere. Cancel anytime.</p>
                 <p class="hero__description">Ready to watch? Enter your email to create or restart your membership.</p>
@@ -59,13 +66,16 @@
                 <div class="feature__details">
                     <div>
                         <h3 class="feature__title">Enjoy on your TV.</h3>
-                        <p class="feature__subtitle">Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</p>
+                        <p class="feature__subtitle">Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV,
+                            Blu-ray players and more.</p>
                     </div>
                     <div class="feature__image__container">
-                        <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/tv.png" alt="no image" class="feature__image">
+                        <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/tv.png"
+                            alt="no image" class="feature__image">
                         <div class="feature__background__video__content">
                             <video controls autoplay loop class="feature__background__video">
-                                <source  src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-tv-in-0819.m4v" >
+                                <source
+                                    src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-tv-in-0819.m4v">
                             </video>
                         </div>
                     </div>
@@ -74,4 +84,5 @@
         </section>
     </main>
 </body>
+
 </html>
